assets/scss/layout/header/_header.scss
// ===========================mobile menu============================

.mobile-nav {
  background-color:$white;
  width: 300px;
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  transform: translateX(-100%);  
  transition: transform 0.3s ease-in-out;  
  z-index: 1000;  
  overflow-y: scroll;

  &.active {
    transform: translateX(0); 
  }

  &__header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 16px 10px;
    background-color: $soft-lilac;
  }

  &__logo {
    height: 30px;
  }

  &__close-btn {
    background: none;
    border: none;
    color: $text-primary;
    font-size: 24px;
    cursor: pointer;
  }

  &__menu {
    list-style: none;
    padding: 0;
    margin: 0;

    > .mobile-nav__item {
      border-bottom: 1px solid $light-gray;  
    }
  }

  &__link {
    display: block;
    padding: 10px;
    color: $text-primary;
    text-decoration: none;
    position: relative;
    font-size: 1.2rem;
  }

  &__submenu {
    list-style: none;
    padding-left: 20px;
    margin: 0;
    overflow: hidden;
    max-height: 0;
    transition: max-height 0.3s ease-out;

    .mobile-nav__item {
      border-bottom: none;  
    }
  }

  &__item--has-dropdown {
    > .mobile-nav__link::after {
      content: "\f054";  
      font-family: "Font Awesome 5 Free";
      font-weight: 900;
      position: absolute;
      top: 50%;  
      transform: translateY(-50%); 
      right: 10px;
      font-size: 12px;
      transition: transform 0.3s ease;
    }

    &.active {
      > .mobile-nav__link::after {
        transform: rotate(90deg);  
      }

      > .mobile-nav__submenu {
        max-height: 1000px;   
        transition: max-height 0.5s ease-in;
        overflow-y: scroll;
      }
    }
  }

  &__button-wrapper{
    display: flex;
    flex-direction: column;
    margin: 2rem 0; 
    padding: 0 10px;
    gap: 0.5rem;

    .mobile-nav__button--login{
      @include btn($bgColor:transparent , $hoverBgColor: $primary-color, $color:$primary-color, $hoverColor:$light-color, $border:$primary-color ,$hoverBorder:$primary-color); 
      display: block;
      text-align: center;
    }
    .mobile-nav__button--get-started{
      @include btn; 
      display: block;
      text-align: center;
    }
  }
}

// desktop overlay
body.menu-open {
  overflow: hidden;   

  &::before {
    content: '';
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba($text-primary, 0.5);  
    z-index: 999; 
  }
}


// ========================== Desktop Menu ==========================
.header {
  height: 7.5rem;
  display: flex;
  align-items: center;

  &__container {
    padding-top: 0;
    padding-bottom: 0;
    width: 100%;
  }

  &__navigation {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1.5rem;
    border: 1px solid $purple-haze;
    border-radius: 1rem;
    background-color: $white;
  }

  &__menu {
    display: none;


    @media (min-width: 1024px) {
      display: block;
    }
  }

  &__menu-toggle {
        display: block;
        background: none;
        border: none;
        color: $text-primary;
        font-size: 24px;
        cursor: pointer;

        @media (min-width: 1024px) {
          display: none;
        }
      }

  .menu {
    display: flex;
    gap: 1.5rem;

    &__item {
      position: relative;

      &:hover > .menu__submenu {
        display: block;
      }

      a {
        color: $gray-medium;
        font-size: 16px;
        font-weight: 500;
        padding: 10px 0;
        line-height: 2;
        text-decoration: none;
        transition: color $transition-duration ease;

        &:hover {
          color: $primary-color;
        }
      }
    }

    &__submenu {
      display: none;
      position: absolute;
      top: 100%;
      left: 0;
      background: $white;
      border-radius: 5px;
      min-width: 200px;
      box-shadow: 0 -2px 8px $shadow-color, 0 4px 8px $shadow-color;
      z-index: 1000;

      .menu__submenu {
        top: 0;
        left: 100%;
      }

      a {
        padding: 10px;
        line-height: 1.2;
        white-space: nowrap;
        display: block;

        &:hover {
          color: $light-color;
          background-color: $deep-violet;
        }
      }
    }
  }

  &__actions {
    display: flex;
    align-items: center;
    gap: 1.5rem;

    .header__button {
      &--login {
        color: $gray-medium;
        font-size: 1rem;
        font-weight: normal;
        line-height: 1.5;
    
        &:hover {
          color: $primary-color;
        }
    
        @media (max-width: 768px) {
          display: none;
        }
      }  

      &--get-started {
        @include btn($bgColor:transparent , $hoverBgColor: $primary-color, $color:$primary-color, $hoverColor:$light-color, $border:$primary-color ,$hoverBorder:$primary-color); 

        @media (max-width: 768px) {
          display: none; 
        }
      }
    }
  }
}

